--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,4 +71,8 @@
     <string name="chat_title">Soporte</string>
     <string name="hint_chat">escribe algo…</string>
 
+    <!-- Fcm -->
+    <string name="notification_channel_id_default">general</string>
+    <string name="notification_channel_name_default">Generales</string>
+
 </resources>
